--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PressedbyStarr</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div id="container">
         <header>
-            <h1>PressedbyStarr</h1>
+            <h1>Pressed By Starr</h1>
         </header>
             <nav></nav> 
             <section>
-                <article class="left"></article>
-                <article class="right"></article>
+                <article class="left"> Left </article>
+                <article class="right"> Right </article>
             </section>
-            <footer></footer>
+            <footer>Copyright © 2024 PressedbyStarr</footer>
         
 
 
