--- a/Images/index.html
+++ b/Images/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PressedbyStarr</title>
     <link rel="stylesheet" href="main.css">
-</head>
+</head> 
 <body>
     <div id="container">
         <header>
@@ -14,7 +14,11 @@
             <nav></nav> 
             <section>
                 <article class="left"> Left </article>
-                <article class="right"> Right </article>
+                <article class="right"><p>
+                <a href="https://github.com/PressedbyStarr">About Us</a></p>
+                <a href="product.html">Product</a></p>
+                <a href="contact.html">Contact</a></p>
+                </article>
             </section>
             <footer>Copyright © 2024 PressedbyStarr</footer>
         
