--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <section>
                 <article class="left"> Left </article>
                 <article class="right"><p>
-                <a href="https://github.com/PressedbyStarr">About Us</a></p>
+                <a href="about.html">About Us</a></p>
                 <a href="product.html">Product</a></p>
                 <a href="contact.html">Contact</a></p>
                 </article>
