--- a/index.html
+++ b/index.html
@@ -27,5 +27,33 @@
         
 
     </div>
+    <table>
+        <tr>Ink<th></th>
+        <th>Lino</th>
+        <th>Tools</th></tr>
+
+        <tr><td>SevenColors</td>
+        <td>Different Sizes</td>
+        <td>V-Gouges</td></tr>
+
+        <tr><td>Oil</td>
+        <td>A5</td>
+        <td>Brayer</td></tr>
+
+        <tr><td></td>Water</td>
+        <td>A3</td>
+        <td></td>Lithographic</tr>
+
+        <tr><td>Lithographic</td>
+        <td>A2</td>
+        <td>Baren</td></tr>
+    </table>
+    <ul>
+        <li>Ink</li>
+        <li>Lino</li>
+        <li>Tools</li>
+    </ul>
+   <iframe width="560" height="315" src="https://www.youtube.com/watch?v=soVrto5reI0" 
+   title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
 </body>
 </html>
