--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=soVrto5reI0" 
    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
 
-   <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
+<p>Diffenr colors coming &#128284;!</p>
+
+<p>Take a look at the ne products &#128270;!</p>
+ <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to display Date and Time.</button>
 
 <p id="demo"></p>
-
 </body>
 </html>
